hphp/test/zend/good/Zend/tests/ns_072.php.expectf
object(foo\test) (0) {
}
NULL

Catchable fatal error: Argument 1 to foo\bar::__construct() must be of type ?foo\foo, stdClass given in %s/ns_072.php on line 22
